feat(availability): add weekly availability management; implement DTOs, repository, and service for user availability